fix/ text align + favicon

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -46,7 +46,6 @@
 
 .timeline-description {
   margin: 0;
-  text-align: justify;
 }
 
 .timeline-item:nth-child(odd) {
